# skillboost_local_idx

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  conftest.py  ka  looper.sh  py_fetch_skillboost.py  pyproject.toml  pytest.ini  requirements.txt  test_py_fetch_skillboost.py
.devcontainer/: Dockerfile  devcontainer.json  install-libs.sh
.github/workflows/: makefile.yml
.pdf/: course_templates621.html  course_templates72.html  paths16.html
nb/: 01.ipynb  README.md  linked-lists.ipynb
src/: a_ds.py  linked_lists.py  nodes.py
tests/: test_linked_lists.py
