[project]
name = "skillboost_local_idx"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.12"
description="skillboost_local_idx"
dependencies = [
    "requests",
    "weasyprint",
    "pytest",
    "ruff",
    "reportlab",
    "loguru",
    "pre-commit>=4.3.0",
    "ipykernel>=6.30.1",
    "google-genai>=1.39.1",
    "gitingest>=0.3.1",
]
