[project]
name = "skillboost_local_idx"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.12"
description="simple skillboost html->pdf page downloader, so you can have those locally and find what you need quicker...",
    "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm"
author_email = "obar1+gh@pm.me"
dependencies = [
    "requests",
    "weasyprint",
    "pytest",
    "ruff",
    "reportlab",
    "loguru",
    "pre-commit>=4.3.0",
    "ipykernel>=6.30.1",
    "google-genai>=1.39.1",
    "gitingest>=0.3.1",
]
